--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"phpunit/phpunit"		: "3.7.*"
 	},
 	"require": {
-		"php"					:">5.4",
+		"php"					:">5.3",
 		"silex/silex"	: "1.*",
 		"twig/twig"				:">=1.8,<2.0-dev",
 		"symfony/twig-bridge"	:"~2.3",
@@ -18,7 +18,8 @@
 		"symfony/translation"	: "*",
 		"symfony/validator"		: "*",
 		"monolog/monolog"		:"*",
-		"symfony/monolog-bridge":"*"
+		"symfony/monolog-bridge":"*",
+        "rajibahmed/rake-db-migrator":"*"
 	},
 	"minimum-stability": "dev",
 	"autoload":{
